--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,15 @@ html, body {
     height: 100%;
 }
 
+.container {
+    height: 100%;
+}
+
+.row {
+    height: 100%;
+}
+
 #map-container {
-    width: 100%;
     height: 100%;
     background-color: #ccc;
 }
