Fixing search div css to allow it to take up more vertical space.

--- a/css/main.css
+++ b/css/main.css
@@ -39,13 +39,13 @@ html, body {
 }
 
 #search-container {
-    overflow: scroll;
+    overflow-y: auto;
 }
 
-@media only screen and (orientation: portrait) {
+/*@media only screen and (orientation: portrait) {
     #map-container { height: 80%; }
     #search-container { height: 20%; }
-}
+}*/
 /* TODO: add media queries to change dimensions based on screen size/orientation
 List of places to be left or top, scrollable. 
 Map to be right or bottom, resized to take up a minimum of 2/3rds the screen.
